ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-my-php-app
spec:
  rules:
  - host: my-php-app.com
    http:
      paths:
      - backend:
          service:
            name: service-my-php-app
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - secretName: secret-tls
status:
  loadBalancer: {}
